KFileWidget: Use targetUrl to extract urls, better handle absolute urls cases

BUG: 459485
(cherry picked from commit ca5e0796f84c37efe69f323f0072a601af34abbf)