tests/kfilewidgettest_gui.cpp
@@ -7,6 +7,7 @@
 
 #include <KFileWidget>
 #include <QApplication>
+#include <QPushButton>
 #include <QUrl>
 
 int main(int argc, char **argv)
@@ -18,7 +19,23 @@ int main(int argc, char **argv)
     fileWidget->setAttribute(Qt::WA_DeleteOnClose);
     fileWidget->show();
 
+    app.connect(fileWidget, &KFileWidget::accepted, fileWidget, [&app, fileWidget]() {
+        qDebug() << "accepted";
+        fileWidget->accept();
+        qDebug() << "Selected File:" << fileWidget->selectedFile();
+        qDebug() << "Selected Url:" << fileWidget->selectedUrl();
+        qDebug() << "Selected Files:" << fileWidget->selectedFiles();
+        qDebug() << "Selected Urls:" << fileWidget->selectedUrls();
+        app.exit();
+    });
+
     QObject::connect(fileWidget, &KFileWidget::destroyed, &app, &QApplication::quit);
+
+    fileWidget->okButton()->show();
+    QObject::connect(fileWidget->okButton(), &QPushButton::clicked, fileWidget, &KFileWidget::slotOk);
+
+    fileWidget->cancelButton()->show();
+    QObject::connect(fileWidget->cancelButton(), &QPushButton::clicked, &app, &QApplication::quit);
 
     return app.exec();
 }
